commit 7df0f45b785841e9e490a945a9f6091a68e6333c
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-06-22 08:23:13 +0200

    Add region and season to run name

commit 0d60c88ba7e0693a832056ea3db5cc0eaf3b0819
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-06-20 14:16:14 +0200

    Fix line endings and allow all interception classes

commit dc1e49c8bb27cac81268719055bc4336843c0506
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-06-20 06:16:19 +0200

    Keep dos format for pesticide.txt test data

commit fd40f74907e89077bd81af5d779ae93e1434d8c6
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-06-20 06:11:12 +0200

    Now the errors in PELMO output are gone - not reproducible

commit 88044fd98c5b95d3f3f9bbef7416af66552189c1
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-06-20 06:04:14 +0200

    Tests for Step 1 and 2 (input file only) pass, PELMO fails
    
    There are spurious errors in the output PELMO generates. Two examples
    are in the test.log

commit 34d4915297faf6236479f0e6474f8aa6b8d4b416
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-06-20 04:30:52 +0200

    Fix generation of input files
    
    - Write header only if not appending
    - Write max_soil and max_ws for metabolites
    - Formatting

commit 7233eed00b799e08c31ae971f997b4b3c14eaea2
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-06-19 20:10:21 +0200

    Single line of generated Step12  input file partially validated

commit c9bcd8e68db61515080ff377c6a04fa807337258
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-06-17 16:36:13 +0200

    Start with the generation of an input file

commit e6f968cf97ed6ca9268e6098d86ba63ff2c6d2b0
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-05-24 16:07:35 +0200

    Fix for the sawtooth function for repeated applications
    
    For n > 2, the second application was made at 2 * i instead of i.

commit 4835e20d1d08203657ab616600286ad9dfd71344