@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Calculate FOCUS Step 1 PEC surface water — PEC_sw_focus • pfm</title>
+<title>Calculate PEC surface water at FOCUS Step 1 — PEC_sw_focus • pfm</title>
 
 <!-- jquery -->
 <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha384-nrOSfDHtoPMzJHjVTdCopGqIqeYETSXhZDFyniQ8ZHcVy08QesyHcnOUpMpqnmWq" crossorigin="anonymous"></script>
@@ -68,19 +68,25 @@
       <div class="row">
   <div class="col-md-9 contents">
     <div class="page-header">
-    <h1>Calculate FOCUS Step 1 PEC surface water</h1>
+    <h1>Calculate PEC surface water at FOCUS Step 1</h1>
     </div>
 
     
-    <p>This is reimplementation of Step 1 of the FOCUS Step 1 and 2 calculator
-version 3.2, authored by Michael Klein. Note that results for multiple
+    <p>This is reimplementation of the FOCUS Step 1 and 2 calculator version 3.2,
+authored by Michael Klein, in R. Note that results for multiple
 applications should be compared to the corresponding results for a
 single application. At current, this is not done automatically in
-this implementation.</p>
+this implementation. Only Step 1 PECs are calculated. However,
+input files are generated that are suitable as input also for Step 2
+to be used with the FOCUS calculator.</p>
     
 
-    <pre class="usage"><span class='fu'>PEC_sw_focus</span>(<span class='no'>parent</span>, <span class='no'>rate</span>, <span class='kw'>n</span> <span class='kw'>=</span> <span class='fl'>1</span>, <span class='kw'>i</span> <span class='kw'>=</span> <span class='fl'>NA</span>, <span class='kw'>met</span> <span class='kw'>=</span> <span class='kw'>NULL</span>, <span class='kw'>f_drift</span> <span class='kw'>=</span> <span class='fl'>NA</span>,
-  <span class='kw'>f_rd</span> <span class='kw'>=</span> <span class='fl'>0.1</span>, <span class='kw'>scenario</span> <span class='kw'>=</span> <span class='no'>FOCUS_Step_12_scenarios</span>$<span class='no'>names</span>)</pre>
+    <pre class="usage"><span class='fu'>PEC_sw_focus</span>(<span class='no'>parent</span>, <span class='no'>rate</span>, <span class='kw'>n</span> <span class='kw'>=</span> <span class='fl'>1</span>, <span class='kw'>i</span> <span class='kw'>=</span> <span class='fl'>NA</span>, <span class='kw'>comment</span> <span class='kw'>=</span> <span class='st'>""</span>, <span class='kw'>met</span> <span class='kw'>=</span> <span class='kw'>NULL</span>,
+  <span class='kw'>f_drift</span> <span class='kw'>=</span> <span class='fl'>NA</span>, <span class='kw'>f_rd</span> <span class='kw'>=</span> <span class='fl'>0.1</span>, <span class='kw'>scenario</span> <span class='kw'>=</span> <span class='no'>FOCUS_Step_12_scenarios</span>$<span class='no'>names</span>,
+  <span class='kw'>region</span> <span class='kw'>=</span> <span class='fu'>c</span>(<span class='st'>"n"</span>, <span class='st'>"s"</span>), <span class='kw'>season</span> <span class='kw'>=</span> <span class='fu'>c</span>(<span class='fl'>NA</span>, <span class='st'>"of"</span>, <span class='st'>"mm"</span>, <span class='st'>"js"</span>),
+  <span class='kw'>interception</span> <span class='kw'>=</span> <span class='fu'>c</span>(<span class='st'>"no interception"</span>, <span class='st'>"minimal crop cover"</span>,
+  <span class='st'>"average crop cover"</span>, <span class='st'>"full canopy"</span>), <span class='kw'>met_form_water</span> <span class='kw'>=</span> <span class='fl'>TRUE</span>,
+  <span class='kw'>txt_file</span> <span class='kw'>=</span> <span class='st'>"pesticide.txt"</span>, <span class='kw'>overwrite</span> <span class='kw'>=</span> <span class='fl'>FALSE</span>, <span class='kw'>append</span> <span class='kw'>=</span> <span class='fl'>TRUE</span>)</pre>
     
     <h2 class="hasAnchor" id="arguments"><a class="anchor" href="#arguments"></a> Arguments</h2>
     <table class="ref-arguments">
@@ -102,6 +108,10 @@ applications are given explicitly</p></td>
     <tr>
       <th>i</th>
       <td><p>The application interval</p></td>
+    </tr>
+    <tr>
+      <th>comment</th>
+      <td><p>A comment for the input file</p></td>
     </tr>
     <tr>
       <th>met</th>
@@ -127,6 +137,42 @@ parent or a metabolite</p></td>
       <td><p>The name of the scenario. Must be one of the scenario
 names given in <code><a href='FOCUS_Step_12_scenarios.html'>FOCUS_Step_12_scenarios</a></code></p></td>
     </tr>
+    <tr>
+      <th>region</th>
+      <td><p>'n' for Northern Europe or 's' for Southern Europe. If NA, only
+Step 1 PECsw are calculated</p></td>
+    </tr>
+    <tr>
+      <th>season</th>
+      <td><p>'of' for October to February, 'mm' for March to May, and 'js'
+for June to September. If NA, only step 1 PECsw are calculated</p></td>
+    </tr>
+    <tr>
+      <th>interception</th>
+      <td><p>One of 'no interception' (default), 'minimal crop cover',
+'average crop cover' or 'full canopy'</p></td>
+    </tr>
+    <tr>
+      <th>met_form_water</th>
+      <td><p>Should the metabolite formation in water be taken into
+account? This can be switched off to check the influence and to compare
+with previous versions of the Steps 12 calculator</p></td>
+    </tr>
+    <tr>
+      <th>txt_file</th>
+      <td><p>the name, and potentially the full path to the
+Steps.12 input text file to which the specification of the run(s)
+should be written</p></td>
+    </tr>
+    <tr>
+      <th>overwrite</th>
+      <td><p>Should an existing file a the location specified in
+<code>txt_file</code> be overwritten?</p></td>
+    </tr>
+    <tr>
+      <th>append</th>
+      <td><p>Should the input text file be appended?</p></td>
+    </tr>
     </table>
     
     <h2 class="hasAnchor" id="note"><a class="anchor" href="#note"></a>Note</h2>
@@ -151,7 +197,7 @@ names given in <code><a href='FOCUS_Step_12_scenarios.html'>FOCUS_Step_12_scenar
 
     <h2 class="hasAnchor" id="examples"><a class="anchor" href="#examples"></a>Examples</h2>
     <pre class="examples"><div class='input'><span class='co'># Parent only</span>
-<span class='no'>dummy_1</span> <span class='kw'>&lt;-</span> <span class='fu'><a href='chent_focus_sw.html'>chent_focus_sw</a></span>(<span class='kw'>cwsat</span> <span class='kw'>=</span> <span class='fl'>6000</span>, <span class='kw'>DT50_ws</span> <span class='kw'>=</span> <span class='fl'>6</span>, <span class='kw'>Koc</span> <span class='kw'>=</span> <span class='fl'>344.8</span>)
+<span class='no'>dummy_1</span> <span class='kw'>&lt;-</span> <span class='fu'><a href='chent_focus_sw.html'>chent_focus_sw</a></span>(<span class='st'>"Dummy 1"</span>, <span class='kw'>cwsat</span> <span class='kw'>=</span> <span class='fl'>6000</span>, <span class='kw'>DT50_ws</span> <span class='kw'>=</span> <span class='fl'>6</span>, <span class='kw'>Koc</span> <span class='kw'>=</span> <span class='fl'>344.8</span>)
 <span class='fu'>PEC_sw_focus</span>(<span class='no'>dummy_1</span>, <span class='fl'>3000</span>, <span class='kw'>f_drift</span> <span class='kw'>=</span> <span class='fl'>0</span>)</div><div class='output co'>#&gt; $f_drift
 #&gt; [1] 0
 #&gt; 
@@ -198,8 +244,9 @@ names given in <code><a href='FOCUS_Step_12_scenarios.html'>FOCUS_Step_12_scenar
 #&gt; [1] 2362.075
 #&gt; </div><div class='input'>
 <span class='co'># Metabolite</span>
-<span class='no'>new_dummy</span> <span class='kw'>&lt;-</span> <span class='fu'><a href='chent_focus_sw.html'>chent_focus_sw</a></span>(<span class='kw'>mw</span> <span class='kw'>=</span> <span class='fl'>250</span>, <span class='kw'>Koc</span> <span class='kw'>=</span> <span class='fl'>100</span>)
-<span class='no'>M1</span> <span class='kw'>&lt;-</span> <span class='fu'><a href='chent_focus_sw.html'>chent_focus_sw</a></span>(<span class='kw'>mw</span> <span class='kw'>=</span> <span class='fl'>100</span>, <span class='kw'>cwsat</span> <span class='kw'>=</span> <span class='fl'>100</span>, <span class='kw'>DT50_ws</span> <span class='kw'>=</span> <span class='fl'>100</span>, <span class='kw'>Koc</span> <span class='kw'>=</span> <span class='fl'>50</span>, <span class='kw'>max_ws</span> <span class='kw'>=</span> <span class='fl'>0</span>, <span class='kw'>max_soil</span> <span class='kw'>=</span> <span class='fl'>0.5</span>)
+<span class='no'>new_dummy</span> <span class='kw'>&lt;-</span> <span class='fu'><a href='chent_focus_sw.html'>chent_focus_sw</a></span>(<span class='st'>"New Dummy"</span>, <span class='kw'>mw</span> <span class='kw'>=</span> <span class='fl'>250</span>, <span class='kw'>Koc</span> <span class='kw'>=</span> <span class='fl'>100</span>)
+<span class='no'>M1</span> <span class='kw'>&lt;-</span> <span class='fu'><a href='chent_focus_sw.html'>chent_focus_sw</a></span>(<span class='st'>"M1"</span>, <span class='kw'>mw</span> <span class='kw'>=</span> <span class='fl'>100</span>, <span class='kw'>cwsat</span> <span class='kw'>=</span> <span class='fl'>100</span>, <span class='kw'>DT50_ws</span> <span class='kw'>=</span> <span class='fl'>100</span>, <span class='kw'>Koc</span> <span class='kw'>=</span> <span class='fl'>50</span>,
+  <span class='kw'>max_ws</span> <span class='kw'>=</span> <span class='fl'>0</span>, <span class='kw'>max_soil</span> <span class='kw'>=</span> <span class='fl'>0.5</span>)
 <span class='fu'>PEC_sw_focus</span>(<span class='no'>new_dummy</span>, <span class='fl'>1000</span>, <span class='kw'>scenario</span> <span class='kw'>=</span> <span class='st'>"cereals, winter"</span>, <span class='kw'>met</span> <span class='kw'>=</span> <span class='no'>M1</span>)</div><div class='output co'>#&gt; $f_drift
 #&gt; [1] 0.02759
 #&gt; 
