@@ -191,7 +191,7 @@ published by the JKI</p></td>
           <td>
             <p><code><a href="PEC_sw_focus.html">PEC_sw_focus</a></code> </p>
           </td>
-          <td><p>Calculate FOCUS Step 1 PEC surface water</p></td>
+          <td><p>Calculate PEC surface water at FOCUS Step 1</p></td>
         </tr><tr>
           <!--  -->
           <td>
