@@ -1,0 +1,3 @@
+Active Substance	Compound	Comment	Mol mass a.i.	Mol mass met.	Water solubility	KOC assessed compound	KOC parent compound	DT50	Max. in Water	Max. in Soil asessed compound	App. Rate	Number of App.	Time between app.	App. Type	DT50 soil parent compound	DT50 soil	DT50 water	DT50 sediment	Region / Season	Interception class
+Dummy 1 cereals, spring n NA	Dummy 1 cereals, winter s of	Dummy 1 citrus n mm	Dummy 1 cotton s js	Dummy 1 field beans n NA	Dummy 1 grass / alfalfa s of	Dummy 1 hops n mm	Dummy 1 legumes s js	Dummy 1 maize n NA	Dummy 1 oil seed rape, spring s of	Dummy 1 oil seed rape, winter n mm	Dummy 1 olives s js	Dummy 1 pome / stone fruit, early applns n NA	Dummy 1 pome / stone fruit, late applns s of	Dummy 1 potatoes n mm	Dummy 1 soybeans s js	Dummy 1 sugar beets n NA	Dummy 1 sunflowers s of	Dummy 1 tobacco n mm	Dummy 1 vegetables, bulb s js	Dummy 1 vegetables, fruiting n NA	Dummy 1 vegetables, leafy s of	Dummy 1 vegetables, root n mm	Dummy 1 vines, early applns s js	Dummy 1 vines, late applns n NA	Dummy 1 appln, aerial s of	Dummy 1 appln, hand (crop < 50 cm) n mm	Dummy 1 appln, hand (crop > 50 cm) s js	Dummy 1 no drift (incorp or seed trtmt) n NA	Dummy 1 cereals, spring n NA	Dummy 1 cereals, winter s of	Dummy 1 citrus n mm	Dummy 1 cotton s js	Dummy 1 field beans n NA	Dummy 1 grass / alfalfa s of	Dummy 1 hops n mm	Dummy 1 legumes s js	Dummy 1 maize n NA	Dummy 1 oil seed rape, spring s of	Dummy 1 oil seed rape, winter n mm	Dummy 1 olives s js	Dummy 1 pome / stone fruit, early applns n NA	Dummy 1 pome / stone fruit, late applns s of	Dummy 1 potatoes n mm	Dummy 1 soybeans s js	Dummy 1 sugar beets n NA	Dummy 1 sunflowers s of	Dummy 1 tobacco n mm	Dummy 1 vegetables, bulb s js	Dummy 1 vegetables, fruiting n NA	Dummy 1 vegetables, leafy s of	Dummy 1 vegetables, root n mm	Dummy 1 vines, early applns s js	Dummy 1 vines, late applns n NA	Dummy 1 appln, aerial s of	Dummy 1 appln, hand (crop < 50 cm) n mm	Dummy 1 appln, hand (crop > 50 cm) s js	Dummy 1 no drift (incorp or seed trtmt) n NA		  -99.00	  -99.00	 6000.00	  344.80	0.00E+00	    6.00	0.00E+00	0.00E+00	 3000.00	    1.00	0.00E+00	0.00E+00	    1.00	    2.00	    3.00	    4.00	    5.00	    6.00	    7.00	    8.00	    9.00	   10.00	   11.00	   12.00	   13.00	   14.00	   15.00	   16.00	   17.00	   18.00	   19.00	   20.00	   21.00	   22.00	   23.00	   24.00	   25.00	   26.00	   27.00	   28.00	0.00E+00	  -99.00	  -99.00	  -99.00	0.00E+00	    1.00
+M1 cereals, winter n NA	M1 cereals, winter s of	M1 cereals, winter n mm	M1 cereals, winter s js	M1 cereals, winter n NA	M1 cereals, winter s of	M1 cereals, winter n mm	M1 cereals, winter s js		  250.00	  100.00	  100.00	   50.00	  100.00	  100.00	0.00E+00	   50.00	 1000.00	    1.00	0.00E+00	    1.00	  -99.00	  -99.00	  -99.00	  -99.00	0.00E+00	    1.00
